<resources>
    <string name="app_name">Idonation</string>
    <string name="name_doador"> Doador </string>
    <string name="name_ong"> ONG </string>
    <string name="name_acessConta"> Acessar conta </string>
    <string name="name_criarConta"> Criar conta </string>
    <string name="name_pf"> Pessoa Física</string>
    <string name="name_pj"> Pessoa Jurídica </string>
    <string name="name_cadastro">Nome completo</string>
    <string name="name_instituicao">Razão social</string>
    <string name="name_cpf">CPF</string>
    <string name="name_cnpf">CNPJ</string>
    <string name="name_email">E-mail</string>
    <string name="name_senha">Senha</string>
    <string name="name_confirmarSenha">Confirmar senha</string>
    <string name="name_categoria">Categoria</string>
    <string-array name="name_categoriaitem">
        <item>Todos</item>
        <item>Crianças</item>
        <item>Jovens</item>
        <item>Adultos</item>
        <item>Idosos</item>
    </string-array>
    <string name="name_descricao">Descrição</string>
    <string name="name_submit">Enviar</string>
    <string name="name_doar">Vamos doar? :)</string>
    <string name="name_fazerdoacao"> Fazer doação </string>
    <string name="name_publidoacao"> Publicar doação</string>
    <string name="name_editPerfil"> Editar perfil</string>
    <string name="name_desatConta"> Desativar conta</string>
    <string name="name_sairConta"> Sair </string>
    <string name="name_configuracoes"> Configurações</string>
    <string name="name_btn_match">Match</string>
    <string name="name_btn_outros">Outros</string>
    <string name="name_btn_curtir">Curtir</string>
    <string name="name_btn_proximo">Próximo</string>
    <string name="name_btn_like">Like</string>
    <string name="name_publicacoes">Publicações: </string>
    <string name="name_doacao">Doação</string>
    <string name="name_like">Like</string>
    <string name="name_bnt_excluir">Excluir </string>
    <string name="nmr_like">{Like}</string>
    <string name="name_tipoCategoria">{Categoria}</string>
    <string name="name_tipoDoacao">{Doacao}</string>
    <string name="name_btn_remover_curtida">Remover Curtida</string>
    <string name="name_numeros_match">{number}</string>
    <string name="name_btn_abrir_chat">Abrir Chat</string>
    <string name="name_doador_mensagens">{Nome Doador}</string>
    <string name="name_fazer_doacao"> Fazer doação</string>
    <string name="name_instituicao"> Nome instituição </string>
    <string-array name="name_mockOngs">
        <item>Selecione uma opção...</item>
        <item>Caminho do sol</item>
        <item>Lar de idosos alzira</item>
        <item>Casa kidszania</item>
    </string-array>
    <string name="name_destinado"> Destinado a:</string>
    <string-array name="name_mockDestinados">
        <item>Selecione uma opção...</item>
        <item>Adultos</item>
        <item>Crianças</item>
        <item>Idosos</item>
        <item>Jovens</item>
        <item>Todas as opções</item>
    </string-array>
    <string name="name_ItensDoados"> Selecione o que será doado: </string>
    <string-array name="name_mockDoacoes">
        <item>Selecione uma opção...</item>
        <item>Alimentos</item>
        <item>Dinheiro</item>
        <item>Roupas</item>
        <item>Todas as opções</item>
    </string-array>
    <string name="name_oqDOar"> Descrição do que será doado:</string>
    <string name="name_publicar_doacao"> Publicar doação </string>

</resources>
