<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadOngPartUm"
    android:background="@color/BackgroundColor">

    <ImageView
        android:layout_width="276dp"
        android:layout_height="176dp"
        android:id="@+id/imgheart"
        android:src="@drawable/logo_core"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/criarContaOng"
        android:text="@string/name_criarConta"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/imgheart"
        />

    <View
        android:layout_width="333dp"
        android:layout_height="450dp"
        android:id="@+id/rectangle_4"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintTop_toTopOf="@id/criarContaOng"
        app:layout_constraintRight_toLeftOf="@id/criarContaOng"
        app:layout_constraintLeft_toRightOf="@id/criarContaOng"
        />

    <EditText
        android:id="@+id/razaoSocialOng"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/name_instituicao"
        android:textSize="20sp"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="@id/criarContaOng"
        app:layout_constraintRight_toLeftOf="@id/criarContaOng"
        app:layout_constraintLeft_toRightOf="@id/criarContaOng"
        />

    <EditText
        android:id="@+id/cnpjOng"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/name_cnpf"
        android:textSize="20sp"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="@id/razaoSocialOng"
        app:layout_constraintRight_toLeftOf="@id/criarContaOng"
        app:layout_constraintLeft_toRightOf="@id/criarContaOng"
        />

    <EditText
        android:id="@+id/emailOng"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/name_email"
        android:textSize="20sp"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="@id/cnpjOng"
        app:layout_constraintRight_toLeftOf="@id/criarContaOng"
        app:layout_constraintLeft_toRightOf="@id/criarContaOng"
        />

    <EditText
        android:id="@+id/senhaOng"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/name_senha"
        android:textSize="20sp"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="@id/emailOng"
        app:layout_constraintRight_toLeftOf="@id/criarContaOng"
        app:layout_constraintLeft_toRightOf="@id/criarContaOng"
        />
    <EditText
        android:id="@+id/descriçãoOng"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/name_descricao"
        android:textSize="20sp"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="@id/senhaOng"
        app:layout_constraintRight_toLeftOf="@id/criarContaOng"
        app:layout_constraintLeft_toRightOf="@id/criarContaOng"
        />

    <EditText
        android:id="@+id/categoriaOng"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:text="@string/name_categoria"
        android:textSize="20sp"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="@id/descriçãoOng"
        app:layout_constraintRight_toLeftOf="@id/descriçãoOng"
        app:layout_constraintLeft_toRightOf="@id/descriçãoOng" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:textSize="20sp"
        android:text="@string/name_submit"
        android:textColor="@color/colorWhite"
        android:background="@drawable/btn_border_radius"
        app:layout_constraintTop_toTopOf="@id/categoriaOng"
        app:layout_constraintRight_toLeftOf="@id/criarContaOng"
        app:layout_constraintLeft_toRightOf="@id/criarContaOng"
        android:onClick="cadastrarOng"
        />

</androidx.constraintlayout.widget.ConstraintLayout>