<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cadastroDoador"
    android:background="@color/BackgroundColor">

    <ImageView
        android:layout_width="276dp"
        android:layout_height="176dp"
        android:id="@+id/imgheart"
        android:src="@drawable/logo_core"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/criarConta"
        android:text="@string/name_criarConta"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/imgheart"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/criarContaPF"
        android:text="@string/name_criarConta"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/imgheart"
        />
    <View
        android:layout_width="333dp"
        android:layout_height="440dp"
        android:id="@+id/rectangle_4"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintTop_toTopOf="@id/criarContaPF"
        app:layout_constraintRight_toLeftOf="@id/criarContaPF"
        app:layout_constraintLeft_toRightOf="@id/criarContaPF"

        />

    <EditText
        android:id="@+id/nomePF"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/name_cadastro"
        android:textSize="20sp"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="@id/criarContaPF"
        app:layout_constraintRight_toLeftOf="@id/criarContaPF"
        app:layout_constraintLeft_toRightOf="@id/criarContaPF"
        />

    <EditText
        android:id="@+id/cpfPF"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/name_cpf"
        android:textSize="20sp"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="@id/nomePF"
        app:layout_constraintRight_toLeftOf="@id/criarContaPF"
        app:layout_constraintLeft_toRightOf="@id/criarContaPF"
        />

    <EditText
        android:id="@+id/emailPF"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/name_email"
        android:textSize="20sp"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="@id/cpfPF"
        app:layout_constraintRight_toLeftOf="@id/criarContaPF"
        app:layout_constraintLeft_toRightOf="@id/criarContaPF"
        />

    <EditText
        android:id="@+id/senhaPF"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/name_senha"
        android:textSize="20sp"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="@id/emailPF"
        app:layout_constraintRight_toLeftOf="@id/criarContaPF"
        app:layout_constraintLeft_toRightOf="@id/criarContaPF"
        />
    <EditText
        android:id="@+id/confirmarSenhaPF"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/name_confirmarSenha"
        android:textSize="20sp"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="@id/senhaPF"
        app:layout_constraintRight_toLeftOf="@id/criarContaPF"
        app:layout_constraintLeft_toRightOf="@id/criarContaPF"
        />

    <Button
        android:id="@+id/enviarCadastroPF"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:textSize="20sp"
        android:text="@string/name_submit"
        android:textColor="@color/colorWhite"
        android:background="@drawable/btn_border_radius"
        app:layout_constraintTop_toTopOf="@id/confirmarSenhaPF"
        app:layout_constraintRight_toLeftOf="@id/confirmarSenhaPF"
        app:layout_constraintLeft_toRightOf="@id/confirmarSenhaPF"
        android:onClick="irTelaLoginCPF"

        />







</androidx.constraintlayout.widget.ConstraintLayout>