<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cad_doadro_pass1"
    android:background="@color/BackgroundColor">

    <ImageView
        android:layout_width="276dp"
        android:layout_height="176dp"
        android:id="@+id/imgCore"
        android:src="@drawable/logo_core"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/imgCore"
        android:background="@drawable/botao_cad1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="280dp"
        android:text="@string/name_acessConta"
        android:gravity="center_vertical"

        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/imgCore"
        android:background="@drawable/botao_cad2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="115dp"
        android:text="@string/name_criarConta"
        android:id="@+id/btnConta"
        />

    <Button
        android:layout_width="276dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnConta"
        android:layout_marginTop="70dp"
        android:text="@string/name_pf"
        android:textSize="15sp"
        android:id="@+id/btnPf"
        android:background="@drawable/botao_config"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnPf"
        android:background="@drawable/linha"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="430dp"

        />

    <Button
        android:layout_width="276dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPf"
        android:layout_marginTop="100dp"
        android:text="@string/name_pj"
        android:textSize="15sp"
        android:id="@+id/btnPj"
        android:background="@drawable/botao_config"
        />


</androidx.constraintlayout.widget.ConstraintLayout>