<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FazerDoacao"
    android:background="@color/BackgroundColor"
    >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:id="@+id/imgheart2"
        android:src="@drawable/logo_core"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFazerDoacao"
        app:layout_constraintTop_toBottomOf="@id/imgheart2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/name_fazer_doacao"
        android:textSize="25sp"
        android:layout_marginTop="135dp"
    />

    <View
    android:layout_width="380dp"
    android:layout_height="490dp"
        android:id="@+id/cardFundo"
    android:background="@drawable/card_login"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="180dp"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_instituicao"
        android:id="@+id/txtRazaoSocio"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/txtFazerDoacao"
        android:layout_marginTop="45dp"
        app:layout_constraintLeft_toRightOf="@id/txtFazerDoacao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txtFazerDoacao"
        android:layout_marginLeft="20dp"
    />

    <EditText
        android:id="@+id/etRazaoSocial"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:background="@drawable/descricao"
        app:layout_constraintTop_toBottomOf="@id/txtRazaoSocio"
        app:layout_constraintLeft_toRightOf="@id/txtRazaoSocio"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/txtDestinado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_destinado"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/etRazaoSocial"
        app:layout_constraintLeft_toRightOf="@id/etRazaoSocial"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
     />

    <EditText
        android:id="@+id/etDestinadoDoacao"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:background="@drawable/descricao"
        app:layout_constraintTop_toBottomOf="@id/txtDestinado"
        app:layout_constraintLeft_toRightOf="@id/txtDestinado"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        />



    <TextView
        android:id="@+id/txtDoacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_ItensDoados"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/etDestinadoDoacao"
        app:layout_constraintLeft_toRightOf="@id/etDestinadoDoacao"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />

    <EditText
        android:id="@+id/etCategoriaDoacao"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:background="@drawable/descricao"
        app:layout_constraintTop_toBottomOf="@id/txtDoacoes"
        app:layout_constraintLeft_toRightOf="@id/txtDoacoes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        />


    <TextView
        android:id="@+id/txtOqDoar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_oqDOar"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/txtDoacoes"
        app:layout_constraintLeft_toRightOf="@id/txtDoacoes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        />

    <EditText
        android:id="@+id/etDescDoacao"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:background="@drawable/descricao"
        app:layout_constraintTop_toBottomOf="@id/txtOqDoar"
        app:layout_constraintLeft_toRightOf="@id/txtOqDoar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
     />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_entrar_login"
        app:layout_constraintTop_toBottomOf="@id/etDescDoacao"
        app:layout_constraintLeft_toRightOf="@id/etDescDoacao"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:text="Finalizar"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:onClick="finalizarDoacao"
     />
    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_entrar_login"
        app:layout_constraintTop_toBottomOf="@id/etDescDoacao"
        app:layout_constraintLeft_toRightOf="@id/etDescDoacao"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="225dp"
        android:text="Cancelar"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:onClick="cancelarDoacao"
        />




</androidx.constraintlayout.widget.ConstraintLayout>